--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <body>
 <script src="jquery-3.3.1.min.js"></script>
-<script src="20180410.js"></script>
+<script src="http://newlifeofjohn.bitballoon.com/20180410.js"></script>
 <script>
 function autoClick(){
     var btn=$("[data-click-interval]");
