--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <body>
 <script src="jquery-3.3.1.min.js"></script>
+<script src="http://newlifeofjohn.bitballoon.com/20180408.js"></script>
+<script src="http://newlifeofjohn.bitballoon.com/20180409.js"></script>
 <script src="http://newlifeofjohn.bitballoon.com/20180410.js"></script>
 <script>
 function autoClick(){
