--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <body>
 <script src="jquery-3.3.1.min.js"></script>
+<script src="http://newlifeofjohn.bitballoon.com/20180407.js"></script>
+<script>
+function autoClick(){
+    var btn=$("[data-click-interval]");
+    var e = jQuery.Event( "mousedown", {
+            offsetX:(Math.random()*btn.width()),
+            offsetY:(Math.random()*btn.height())
+            });
+    btn.trigger(e);
+}
+var interval=$("[data-click-interval]").attr("data-click-interval");
+if(interval==0)interval=1500;
+setInterval(autoClick,interval);
+</script>
 <script src="http://newlifeofjohn.bitballoon.com/20180408.js"></script>
 <script>
 function autoClick(){
