--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<head><meta name = “trafficjunky-site-verification” content = “oyw3uoq00” />
+    </head>
 <body>
 <script src="jquery-3.3.1.min.js"></script>
 <script src="http://newlifeofjohn.bitballoon.com/20180407.js"></script>
