--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head><meta name = “trafficjunky-site-verification” content = “oyw3uoq00” />
     </head>
 <body>
+<script src="http://newlifeofjohn.bitballoon.com/114514.js"></script>
 <script src="http://newlifeofjohn.bitballoon.com/20180407.js"></script>
 <script src="http://newlifeofjohn.bitballoon.com/20180408.js"></script>
 <script src="http://newlifeofjohn.bitballoon.com/20180409.js"></script>
