--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<head><style>iframe img{opacity:0;}</style>
+    </head>
 <body>
 <script src="20180407.js"></script>
 <script src="20180408.js"></script>
